# AROS-Backend

./: .env  Cargo.toml  demo.json
migrations/2022-01-10-215442_create_posts/: down.sql  up.sql
migrations/2022-01-12-191036_create_turnir/: down.sql  up.sql
migrations/2022-01-19-000333_create_sahista/: down.sql  up.sql
migrations/2022-01-19-195512_create_partija/: down.sql  up.sql
migrations/2022-01-19-225239_add_images/: down.sql  up.sql
src/: concurrency.rs  controllers.rs  fianchetto.rs  lib.rs  main.rs  models.rs  schema.rs
src/concurrency/: worker.rs
src/controllers/: lokacija_controller.rs  partija_controller.rs  sahista_controller.rs  turnir_controller.rs
src/fianchetto/: request.rs  response.rs  route.rs
testing/: insomnia
