[package]
name = "micro-backend-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
route-recognizer = "0.3.1"
serde_json = "1.0.74"
chrono = "0.4"
serde = { version = "1.0.133", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"